A lot of fixes, recharging and end-of-sim implemented in more detail, sim functionality and thread starting requirements reworked to make more sense, a bunch of unused code removed.